--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,7 @@
-DirectoryIndex /app/index.html
+#DirectoryIndex /app/index.html
+
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^prime-numbers-api-swagger-ui.herokuapp.com$ [NC,OR]
+RewriteCond %{HTTP_HOST} ^www.prime-numbers-api-swagger-ui.herokuapp.com$
+RewriteCond %{REQUEST_URI} !app/
+RewriteRule (.*) /app/$1 [L]
