--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,6 @@
-#DirectoryIndex /app/index.html
-
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^prime-numbers-api-swagger-ui.herokuapp.com$ [NC,OR]
 RewriteCond %{HTTP_HOST} ^www.prime-numbers-api-swagger-ui.herokuapp.com$
 RewriteCond %{REQUEST_URI} !app/
 RewriteRule (.*) /app/$1 [L]
+DirectoryIndex index.html
