--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ RewriteCond %{HTTP_HOST} ^prime-numbers-api-swagger-ui.herokuapp.com$ [NC,OR]
 RewriteCond %{HTTP_HOST} ^www.prime-numbers-api-swagger-ui.herokuapp.com$
 RewriteCond %{REQUEST_URI} !app/
 RewriteRule (.*) /app/$1 [L]
-DirectoryIndex index.html
+DirectoryIndex /app/index.html
